# rust-mongo-graphql

./: .env  Cargo.toml  README.md
src/: main.rs
src/config/: mongo.rs
src/graphql/: mod.rs  mutations.rs  queries.rs
src/models/: users.rs
src/services/: mod.rs  users.rs
src/util/: common.rs  constant.rs  mod.rs
