[package]
name = "rust_mongo_graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

futures = "0.3.21"
async-std = { version = "1.12.0", features = ["attributes"] }
tide = "0.16.0"

dotenv = "0.15.0"
lazy_static = "1.4.0"
regex = "1.6.0"

async-graphql = { version = "4.0.4", features = ["bson", "chrono"] }
mongodb = { version = "2.2.2", default-features = false, features = [
  "async-std-runtime",
] }

serde = { version = "1.0.139", features = ["derive"] }
jsonwebtoken = "8.1.1"
ring = "0.16.20"
base64 = "0.13.0"

